# Zturn_server_client

./: Sau đó bạn sẽ thấy:  Sau đó bạn sẽ thấy:.pub  client.cpp  libstdc++6-armhf-cross_10.5.0-1ubuntu1~20.04cross1_all.deb
back_up/: client  server  server.cpp
project_ver2/: CMakeLists.txt
project_ver2/include/: Client.h  Server.h
project_ver2/sources/: Client.cpp  Server.cpp  main_client.cpp  main_server.cpp
